--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "2.0.0",
   "type": "module",
   "scripts": {
-    "mock": "json-server --watch ./src/mock/db.json --port 3001",
-    "dev": "npm run mock & vite --host 0.0.0.0 --port 3000",
+    "dev": "vite --host 0.0.0.0 --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview --host 0.0.0.0 --port 3000",
     "storybook": "storybook dev -p 6006",
